--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script>
 <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
-<link href="assets/style.css" rel="stylesheet" type="text/css" />
-<script src="assets/script.js"></script>
+<link href="style.css" rel="stylesheet" type="text/css" />
+<script src="script.js"></script>
 <head>
 <title>Selamat Ulang Tahun Sayang</title>
 </head>
