--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
    
    pemb = "....         ";
    
-   wallpaper.src = "https://i.postimg.cc/wMSSWX1B/IMG-20220211-161601-480.jpg";
+   wallpaper.src = "bg.jpg";
    
    gambar1 = "https://i.ibb.co/4Ppd5jv/snuggles-caring-1.gif";
    kata1 = "Ayaaangggg &#10084;";
